--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ header {
 }
 
 form {
-  width: 100%;
+  width: 95%;
+  justify-content: center;
+  padding-left: 20px;
 }
 
 h1 {
@@ -38,11 +40,13 @@ h2 {
 
 p {
   color: #ccc;
-  padding-bottom: 20px;
+}
+
+.container {
+
 }
 
 .contact {
-  border-bottom: 3px solid #000;
 }
 
 .contact,
@@ -60,9 +64,13 @@ fieldset {
 #contact,
 #newsletter {
   font-size: 1.5em;
-  color: #000;
   text-align: left;
   width: 100%;
+  font-size: 1.5em;
+  color: #000;
+  border-top: 5px double #000;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 label {
@@ -83,6 +91,19 @@ input[type="number"],
  border: none;
 }
 
+input[placeholder] {
+  text-align: right;
+  padding-right: 2em;
+}
+
+::placeholder {
+    color: #ccc;
+}
+
+#state {
+  color: grey;
+}
+
 .newsletter {
 
 }
@@ -93,4 +114,10 @@ clear::after {
   content: "";
   display: table;
   clear: both;
+}
+
+/*Psuedo*/
+
+input:focus {
+  outline: 1px solid #000080;
 }
