--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,12 @@
 /*Body Styles--------*/
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Frank Ruhl Libre', serif;
   color: grey;
   text-decoration: none;
   margin: 0;
 }
 
-header {
-}
 
 .signup {
   text-align: center;
@@ -33,6 +31,8 @@ h1 {
   line-height: 3em;
   color: #fff;
   padding-top: 7px;
+  font-family:'Italiana', serif;
+  margin: 0;
 }
 
 h2 {
@@ -129,7 +129,35 @@ input[type="radio"]{
 }
 
 textarea {
-  
+  margin-top: 5px;
+  margin-bottom: 15px;
+  width: 100%;
+  height: 8em;
+  background-color: #e6e6e6;
+  border-radius: .3em;
+  border: none;
+}
+
+.btn {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 3em;
+  background-color: #2eb8b8;
+  border-radius: .3em;
+  border: none;
+  color: #fff;
+}
+
+.btn:hover{}
+
+.btn::after{}
+
+.footer{
+  text-align: center;
+  font-style: italic;
+  color: #d0e1e1;
+  padding-bottom: 100px;
 }
 /* Float Clearfix*/
 
